# ComfyUI_Seed-VC

./: README-CN.md  README.md  __init__.py  pyproject.toml  requirements.txt  seedvcnode.py
configs/: config_dit_mel_seed.yml  config_dit_mel_seed_facodec_small.yml  config_dit_mel_seed_uvit_whisper_base_f0_44k.yml  config_dit_mel_seed_uvit_whisper_small_wavenet.yml  config_dit_mel_seed_wavenet.yml  hifigan.yml
configs/astral_quantization/: default_2048.yml  default_32.yml
configs/inuse/: config.json
configs/presets/: config_dit_mel_seed_uvit_whisper_base_f0_44k.yml  config_dit_mel_seed_uvit_whisper_small_wavenet.yml  config_dit_mel_seed_uvit_xlsr_tiny.yml
configs/v2/: dit_small.yaml  vc_wrapper.yaml
dac/model/: dac.py
dac/nn/: quantize.py
dac/utils/: __init__.py
modules/: commons.py  diffusion_transformer.py  flow_matching.py  wavenet.py
modules/campplus/: DTDNN.py
modules/cosyvoice_tokenizer/: frontend.py
modules/gpt_fast/: model.py
modules/v2/: dit_wrapper.py  length_regulator.py  vc_wrapper.py
seed_vc/dac/: __main__.py
seed_vc/dac/model/: dac.py  encodec.py
seed_vc/dac/nn/: quantize.py
seed_vc/dac/utils/: __init__.py  decode.py  encode.py
seed_vc/modules/: commons.py  diffusion_transformer.py  flow_matching.py  length_regulator.py  quantize.py  wavenet.py
seed_vc/modules/campplus/: DTDNN.py  classifier.py
seed_vc/modules/v2/: dit_wrapper.py  length_regulator.py
workflow-examples/: 变声.json
